--- a/index.html
+++ b/index.html
@@ -77,5 +77,7 @@
 		<p id="fuck1">习西铠甲,麻痹铠甲,日天铠甲</p>
 	<b class="cls6">口头禅</b>
 	<div  id="fuck" type="margin-left:20px;">杨勇成:则go韩徐,啊~</div>
+	<h1>肖翔镇站</h1>
+	<img scr="201802011015176759.jpg"></img>
  </body>
 </html>
