--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		<p id="fuck1">习西铠甲,麻痹铠甲,日天铠甲</p>
 	<b class="cls6">口头禅</b>
 	<div  id="fuck" type="margin-left:20px;">杨勇成:则go韩徐,啊~</div>
-	<b style="text-align:center;">肖翔镇站</b>
+	<div style="text-align:center;">肖翔镇站</div>
 	<img src="201802011015176759.jpg"  align="center" />
  </body>
 </html>
