--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
 	<b class="cls6">口头禅</b>
 	<div  id="fuck" type="margin-left:20px;">杨勇成:则go韩徐,啊~</div>
 	<div style="text-align:center;">肖翔镇站</div>
-	<img src="201802011015176759.jpg"  align="center" />
+	<div align="center"><img src="201802011015176759.jpg" /></div> 
  </body>
 </html>
