--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 			margin-bottom:50px;
 			
 		}
+	  	
+	
   </style>
  </head>
  <body>
@@ -77,7 +79,7 @@
 		<p id="fuck1">习西铠甲,麻痹铠甲,日天铠甲</p>
 	<b class="cls6">口头禅</b>
 	<div  id="fuck" type="margin-left:20px;">杨勇成:则go韩徐,啊~</div>
-	<div style="text-align:center;">肖翔镇站</div>
+	<div style="margin:0px auto">肖翔镇站</div>
 	<div text-align="center"><img src="201802011015176759.jpg" /></div> 
  </body>
 </html>
